--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     /* Video */
   video {
     position: absolute;
-    bottom: -20vh; /* keeps it slightly above bottom edge */
+    bottom: -10vh; /* keeps it slightly above bottom edge */
     left: 50%;
-    transform: translateX(-50%);
-    width: 200vw; /* scales nicely on all screens */
+    transform: translateX(-50%) scale(0.8);
+    width: 100vw; /* scales nicely on all screens */
     max-width: 700px; /* optional limit for large displays */
     height: auto;
     object-fit: contain;
